Cycles viewport hair not rendered if simple children count set to zero. #45937

Closed
opened 2015-08-28 21:28:04 +02:00 by Robert Townsend · 6 comments

System Information
Ubuntu 14.04 64-bit
nVidia GTX 970
nVidia Driver: 352.30
CUDA: 6.5.14

Blender Version
Broken: 2.75a

Short description of error
When simple children of a hair particle system display count is set to zero, and render mode is set to cycles rendered in the viewport, no hair particles are displayed, even though when set back to solid view particles are displayed, and when rendered with F12 particles are displayed. A non-zero children count displays viewport rendered particles, as would be expected. Blender Render works properly, this appears to be only a Cycles viewport render problem.

System Information Ubuntu 14.04 64-bit nVidia GTX 970 nVidia Driver: 352.30 CUDA: 6.5.14 Blender Version Broken: 2.75a Short description of error When simple children of a hair particle system display count is set to zero, and render mode is set to cycles rendered in the viewport, no hair particles are displayed, even though when set back to solid view particles are displayed, and when rendered with F12 particles are displayed. A non-zero children count displays viewport rendered particles, as would be expected. Blender Render works properly, this appears to be only a Cycles viewport render problem.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @rtownsend

Added subscriber: @rtownsend

Added subscriber: @mont29

Added subscriber: @mont29
Sergey Sharybin was assigned by Bastien Montagne 2015-08-28 21:59:45 +02:00

This issue was referenced by b899114a7e

This issue was referenced by b899114a7ed222ad41c86f2408200838dd6e33ba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@9a4ba092a0

This issue was referenced by blender/cycles@9a4ba092a0ded881481536a0d742d132af5c965e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45937
No description provided.