Fix T45937: Cycles hair not rendered if children count set to zero